Updated the faclity template with more attributes

--- a/Recess_Project_Template/src/our_app/website/templates/facility.html
+++ b/Recess_Project_Template/src/our_app/website/templates/facility.html
@@ -268,39 +268,39 @@
                       <span class="rating">
                         <input
                           type="radio"
-                          id="star5_sports"
-                          name="facility_rating"
+                          id="star5_cleanliness"
+                          name="Cleanliness"
                           value="very_good"
                         />
-                        <label for="star5_sports"></label>
+                        <label for="star5_cleanliness"></label>
                         <input
                           type="radio"
-                          id="star4_sports"
-                          name="facility_rating"
+                          id="star4_cleanliness"
+                          name="Cleanliness"
                           value="good"
                         />
-                        <label for="star4_sports"></label>
+                        <label for="star4_cleanliness"></label>
                         <input
                           type="radio"
-                          id="star3_sports"
-                          name="facility_rating"
+                          id="star3_cleanliness"
+                          name="Cleanliness"
                           value="fair"
                         />
-                        <label for="star3_sports"></label>
+                        <label for="star3_cleanliness"></label>
                         <input
                           type="radio"
-                          id="star2_sports"
-                          name="facility_rating"
+                          id="star2_cleanliness"
+                          name="Cleanliness"
                           value="poor"
                         />
-                        <label for="star2_sports"></label>
+                        <label for="star2_cleanliness"></label>
                         <input
                           type="radio"
-                          id="star1_sports"
-                          name="facility_rating"
+                          id="star1_cleanliness"
+                          name="Cleanliness"
                           value="very_poor"
                         />
-                        <label for="star1_sports"></label>
+                        <label for="star1_cleanliness"></label>
                       </span>
                     </p>
                   </div>
@@ -310,39 +310,39 @@
                       <span class="rating">
                         <input
                           type="radio"
-                          id="star5_sports"
-                          name="facility_rating"
+                          id="star5_maintenance"
+                          name="Maintenance"
                           value="very_good"
                         />
-                        <label for="star5_sports"></label>
+                        <label for="star5_maintenance"></label>
                         <input
                           type="radio"
-                          id="star4_sports"
-                          name="facility_rating"
+                          id="star4_maintenance"
+                          name="Maintenance"
                           value="good"
                         />
-                        <label for="star4_sports"></label>
+                        <label for="star4_maintenance"></label>
                         <input
                           type="radio"
-                          id="star3_sports"
-                          name="facility_rating"
+                          id="star3_maintenance"
+                          name="Maintenance"
                           value="fair"
                         />
-                        <label for="star3_sports"></label>
+                        <label for="star3_maintenance"></label>
                         <input
                           type="radio"
-                          id="star2_sports"
-                          name="facility_rating"
+                          id="star2_maintenance"
+                          name="Maintenance"
                           value="poor"
                         />
-                        <label for="star2_sports"></label>
+                        <label for="star2_maintenance"></label>
                         <input
                           type="radio"
-                          id="star1_sports"
-                          name="facility_rating"
+                          id="star1_maintenance"
+                          name="Maintenance"
                           value="very_poor"
                         />
-                        <label for="star1_sports"></label>
+                        <label for="star1_maintenance"></label>
                       </span>
                     </p>
                   </div>
@@ -352,39 +352,39 @@
                       <span class="rating">
                         <input
                           type="radio"
-                          id="star5_sports"
-                          name="facility_rating"
+                          id="star5_safety"
+                          name="Safety"
                           value="very_good"
                         />
-                        <label for="star5_sports"></label>
+                        <label for="star5_safety"></label>
                         <input
                           type="radio"
-                          id="star4_sports"
-                          name="facility_rating"
+                          id="star4_safety"
+                          name="Safety"
                           value="good"
                         />
-                        <label for="star4_sports"></label>
+                        <label for="star4_safety"></label>
                         <input
                           type="radio"
-                          id="star3_sports"
-                          name="facility_rating"
+                          id="star3_safety"
+                          name="Safety"
                           value="fair"
                         />
-                        <label for="star3_sports"></label>
+                        <label for="star3_safety"></label>
                         <input
                           type="radio"
-                          id="star2_sports"
-                          name="facility_rating"
+                          id="star2_safety"
+                          name="Safety"
                           value="poor"
                         />
-                        <label for="star2_sports"></label>
+                        <label for="star2_safety"></label>
                         <input
                           type="radio"
-                          id="star1_sports"
-                          name="facility_rating"
+                          id="star1_safety"
+                          name="Safety"
                           value="very_poor"
                         />
-                        <label for="star1_sports"></label>
+                        <label for="star1_safety"></label>
                       </span>
                     </p>
                   </div>
@@ -394,82 +394,82 @@
                       <span class="rating">
                         <input
                           type="radio"
-                          id="star5_sports"
-                          name="facility_rating"
+                          id="star5_resource"
+                          name="resource_availability"
                           value="very_good"
                         />
-                        <label for="star5_sports"></label>
+                        <label for="star5_resource"></label>
                         <input
                           type="radio"
-                          id="star4_sports"
-                          name="facility_rating"
+                          id="star4_resource"
+                          name="resource_availability"
                           value="good"
                         />
-                        <label for="star4_sports"></label>
+                        <label for="star4_resource"></label>
                         <input
                           type="radio"
-                          id="star3_sports"
-                          name="facility_rating"
+                          id="star3_resource"
+                          name="resource_availability"
                           value="fair"
                         />
-                        <label for="star3_sports"></label>
+                        <label for="star3_resource"></label>
                         <input
                           type="radio"
-                          id="star2_sports"
-                          name="facility_rating"
+                          id="star2_resource"
+                          name="resource_availability"
                           value="poor"
                         />
-                        <label for="star2_sports"></label>
+                        <label for="star2_resource"></label>
                         <input
                           type="radio"
-                          id="star1_sports"
-                          name="facility_rating"
+                          id="star1_resource"
+                          name="resource_availability"
                           value="very_poor"
                         />
-                        <label for="star1_sports"></label>
+                        <label for="star1_resource"></label>
                       </span>
                     </p>
                   </div>
 
                   <div class="col-md-6">
                     <p>
-                      Overaall facility rating:
+                      Overall facility rating:
                       <span class="rating">
                         <input
                           type="radio"
-                          id="star5_sports"
+                          id="star5_overall"
                           name="facility_rating"
                           value="very_good"
                         />
-                        <label for="star5_sports"></label>
+                        <label for="star5_overall"></label>
                         <input
                           type="radio"
-                          id="star4_sports"
+                          id="star4_overall"
                           name="facility_rating"
                           value="good"
                         />
-                        <label for="star4_sports"></label>
+                        <label for="star4_overall"></label>
                         <input
                           type="radio"
-                          id="star3_sports"
+                          id="star3_overall"
                           name="facility_rating"
                           value="fair"
                         />
-                        <label for="star3_sports"></label>
+                        <label for="star3_overall"></label>
                         <input
                           type="radio"
-                          id="star2_sports"
+                          id="star2_overall"
                           name="facility_rating"
                           value="poor"
                         />
-                        <label for="star2_sports"></label>
+                        <label for="star2_overall"></label>
                         <input
                           type="radio"
-                          id="star1_sports"
+                          id="star1_overall"
                           name="facility_rating"
                           value="very_poor"
                         />
-                        <label for="star1_sports"></label>
+                        <label for="star1_overall"></label>
                       </span>
                     </p>
                   </div>
