Updated the faclity template with more attributes on main branch

--- a/Recess_Project_Template/src/our_app/website/templates/facility.html
+++ b/Recess_Project_Template/src/our_app/website/templates/facility.html
@@ -258,7 +258,7 @@
                   </div>
                   <span class="wow fadeInDown" style="color: #333"
                     ><b
-                      >HOW WOULD YOU RATE YOUR INSTRUCTOR IN THE FOLLOWING
+                      >HOW WOULD YOU RATE YOUR FACILITY IN THE FOLLOWING
                       FIELDS?</b
                     ></span
                   >
