--- a/Recess_Project_Template/src/our_app/website/templates/course.html
+++ b/Recess_Project_Template/src/our_app/website/templates/course.html
@@ -137,21 +137,21 @@
                             </div>
                         </div>
 
-                       <form method="post" class="needs-validation" novalidate>
+                       <form method="post" >
                             {% csrf_token %}
 
-                            <div class="form-group">
+                           <div class="form-group">
                                 <label for="{{ courseForm.courseName.id_for_label }}">Course Name<span
                                         style="color: red;">*</span>:</label>
                                 {{ courseForm.courseName }}
-                                <div class="invalid-feedback">Please provide the course's name.</div>
+                                <div class="invalid-feedback">Please provide the Course's name.</div>
                             </div>
 
                             <div class="form-group">
                                 <label for="{{ courseForm.courseCode.id_for_label }}">Course Code<span
                                         style="color: red;">*</span>:</label>
                                 {{ courseForm.courseCode }}
-                                <div class="invalid-feedback">Please provide the course's code.</div>
+                                <div class="invalid-feedback">Please provide the Course code.</div>
                             </div>
 
                             <div class="form-group">
@@ -161,38 +161,38 @@
                                 <div class="invalid-feedback">Please provide the course description.</div>
                             </div>
 
-                            <span class="wow fadeInDown" style="color: #333;"><b>HOW WOULD YOU RATE THIS COURSE IN
+                            <span class="wow fadeInDown" style="color: #333;"><b>HOW WOULD YOU RATE YOUR COURSE IN
                                     THE FOLLOWING FIELDS?</b></span>
 
-                            <!-- Knowledge -->
+
                             <div class="form-group">
-                                <label for="{{ courseForm.interest.id_for_label }}" class="d-block"><b>Interest gained</b><span
+                                <label for="{{ courseForm.effectiveness.id_for_label }}" class="d-block"><b>Effect of the course</b><span
                                         style="color: red;">*</span>:</label>
+                                <div class="form-check form-check-inline justify-content-between gap">
+                                    {{ courseForm.effectiveness }}
+                                </div>
+                                <div class="invalid-feedback">Please rate the course effectiveness.</div>
+                            </div>
+
+
+                            <div class="form-group">
+                                <label for="{{ courseForm.interest.id_for_label }}"
+                                    class="d-block"><b>Interest</b><span style="color: red;">*</span>:</label>
                                 <div class="form-check form-check-inline justify-content-between gap">
                                     {{ courseForm.interest }}
                                 </div>
-                                <div class="invalid-feedback">Please rate the interest developed.</div>
+                                <div class="invalid-feedback">Please rate the course interest.</div>
                             </div>
 
-                            <!-- Communication -->
                             <div class="form-group">
-                                <label for="{{ courseForm.effectiveness.id_for_label }}"
-                                    class="d-block"><b>Effect on program</b><span style="color: red;">*</span>:</label>
-                                <div class="form-check form-check-inline justify-content-between gap">
-                                    {{ form.communication }}
-                                </div>
-                                <div class="invalid-feedback">Please rate the course's effect on the program being studied.</div>
-                            </div>
-
-
-
-                            <div class="form-group">
-                                <label for="{{ courseForm.improvement.id_for_label }}"><b>Additional
-                                        Improvements:</b></label>
+                                <label for="{{ courseForm.improvement.id_for_label }}"><b>Recommended Improvements:</b></label>
                                 {{ courseForm.improvement }}
-                                <div class="invalid-feedback">Please provide any recommendations.</div>
+                                <div class="invalid-feedback">Please provide recommendations.</div>
                             </div>
-
+                            <div class="row">
+                                    <br>
+                                    <br>
+                            </div>
                             <div class="row">
                                 <div class="col-12">
                                     <div class="button text-center">
