--- a/Recess_Project_Template/src/our_app/website/templates/course.html
+++ b/Recess_Project_Template/src/our_app/website/templates/course.html
@@ -3,6 +3,8 @@
 <html class="no-js" lang="">
 
 <head>
+
+    <meta charset="utf-8">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Group S</title>
