--- a/Recess_Project_Template/src/our_app/website/templates/course.html
+++ b/Recess_Project_Template/src/our_app/website/templates/course.html
@@ -137,7 +137,7 @@
                             </div>
                         </div>
 
-                       <form method="post" >
+                       <form method="post" class="needs-validation" novalidate >
                             {% csrf_token %}
 
                            <div class="form-group">
