--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
@@ -658,6 +658,14 @@
                     </tr>
                   </thead>
                   <tbody>
+                  {% for student in students %}
+                  <tr>
+                      <td>{{ student.name }}</td>
+                      <td>{{ student.studentId }}</td>
+                      <td>{{ student.emailAddress }}</td>
+                      <td>{{ student.year_of_study }}</td>
+                                    </tr>
+                    {% endfor %}
 
                   </tbody>
                 </table>
