--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/instructors.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/instructors.html
@@ -370,7 +370,7 @@
         <div class="col-12">
           <div class="card mb-4">
             <div class="card-header pb-0">
-              <h6>Courses Feedback table</h6>
+              <h6>Instructors Feedback table</h6>
             </div>
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
