Retrieving data from database to dashboard.html

--- a/Recess_Project_Template/src/our_app/website/templates/index.html
+++ b/Recess_Project_Template/src/our_app/website/templates/index.html
@@ -33,7 +33,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'course'%}">Course</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'x'%}">Course</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'facility'%}">Facility</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'instructor'%}">Instructor</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'sign_in'%}">ADMIN</a></li>
@@ -50,7 +50,7 @@
                     <h1 class="mx-auto my-0 text-uppercase">Group S</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A place where we access our courses, lecturers, and
                         facilities for better learning</h2>
-                    <a class="btn btn-primary" href="{% url 'course'%}">Get Started</a>
+                    <a class="btn btn-primary" href="{% url 'x'%}">Get Started</a>
                 </div>
             </div>
         </div>
