--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
@@ -373,7 +373,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Courses</p>
                     <h5 class="font-weight-bolder mb-0">
-                      53
+                      {{ courses.count|add:Feed.count }}
                       <span class="text-success text-sm font-weight-bolder">+5</span>
                     </h5>
                   </div>
