--- a/Recess_Project_Template/src/our_app/website/templates/facility.html
+++ b/Recess_Project_Template/src/our_app/website/templates/facility.html
@@ -163,21 +163,22 @@
           <div class="contact-form-wrapper">
             <div class="row">
               <div class="col-xl-10 col-lg-8 mx-auto">
-                <div class="section-title1 text-center mb-50">
-                  <span class="wow fadeInDown" data-wow-delay=".2s" style="color: #333">Hello! As a student, it's your
-                    right to evaluate your
-                    instructor in different aspects, so kindly take some
-                    little time to fill the form below, which is intended to
-                    provide us with feedback about your instructor of your
-                    choice according to the given fields.<br />
-                    In doing this, it will help the institution to improve
-                    teaching and learning. Your response will be treated with
-                    utmost confidentiality. Respond without bias. Thank
-                    you.</span>
+                <div class="section-title1  mb-50">
+                  <h2 class="wow fadeInDown text-center" data-wow-delay=".2s" style="color: #333">Hello! As a student,
+                  </h2>
+                  <br>
+                  <h5 class="wow fadeInDown">It's your right to evaluate your instructor in different aspects, so kindly
+                    take some little time to fill the form below, which is intended to provide us with feedback about
+                    your instructor of your choice according to the given fields.</h5>
+                  <p class="wow fadeInDown" data-wow-delay=".4s" style="color: #333">
+                    In doing this, it will help the institution to improve teaching and learning. Your response will be
+                    treated with utmost confidentiality. Respond without bias. Thank you.
+                  </p>
                 </div>
               </div>
             </div>
-            <form action="{% url 'facility_feedback' %}" method="post" class="contact-form">
+
+            <form action="{% url 'facility' %}" method="post" class="contact-form">
 
               {% csrf_token %}
               <div class="row">
@@ -186,122 +187,131 @@
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <input type="text" name="facility_college" id="email" placeholder="College of facility" required />
+                    <input type="text" name="facility_college" id="" placeholder="College of facility" required />
                   </div>
                   <br />
-                  <div class="col-md-6">
-                    <label for="facility_accessibility">Facility accessibility:</label><br />
-                    <select id="facility_accessibility" name="facility_accessibility">
-                      <option value="">-- Select one --</option>
-                      <option value="fully">Fully accessible</option>
-                      <option value="partial">Partially accessible</option>
-                      <option value="not">Not accessible</option>
-                    </select>
+
+
+                  <div class="row">
+                    <div class="col-md-6 mb-3">
+                      <label for="facility_accessibility">Facility accessibility:</label>
+                      <select class="form-control" id="facility_accessibility" name="facility_accessibility">
+                        <option value="">-- Select one --</option>
+                        <option value="fully">Fully accessible</option>
+                        <option value="partial">Partially accessible</option>
+                        <option value="not">Not accessible</option>
+                      </select>
+                    </div>
                   </div>
-                </div>
 
-                <div class="col-md-6">
-                  <p>
-                    Cleanliness and Hygiene:
-                    <span class="rating">
-                      <input type="radio" id="star5_cleanliness" name="cleanliness" value="very_good" />
-                      <label for="star5_cleanliness"></label>
-                      <input type="radio" id="star4_cleanliness" name="cleanliness" value="good" />
-                      <label for="star4_cleanliness"></label>
-                      <input type="radio" id="star3_cleanliness" name="classleanliness" value="fair" />
-                      <label for="star3_cleanliness"></label>
-                      <input type="radio" id="star2_cleanliness" name="cleanliness" value="poor" />
-                      <label for="star2_cleanliness"></label>
-                      <input type="radio" id="star1_cleanliness" name="cleanliness" value="very_poor" />
-                      <label for="star1_cleanliness"></label>
-                    </span>
-                  </p>
-                </div>
-                <div class="col-md-6">
-                  <p>
-                    Maintenance:
-                    <span class="rating">
-                      <input type="radio" id="star5_maintenance" name="maintenance" value="very_good" />
-                      <label for="star5_maintenance"></label>
-                      <input type="radio" id="star4_maintenance" name="maintenance" value="good" />
-                      <label for="star4_maintenance"></label>
-                      <input type="radio" id="star3_maintenance" name="maintenance" value="fair" />
-                      <label for="star3_maintenance"></label>
-                      <input type="radio" id="star2_maintenance" name="maintenance" value="poor" />
-                      <label for="star2_maintenance"></label>
-                      <input type="radio" id="star1_maintenance" name="maintenance" value="very_poor" />
-                      <label for="star1_maintenance"></label>
-                    </span>
-                  </p>
-                </div>
-                <div class="col-md-6">
-                  <p>
-                    Safety and Security:
-                    <span class="rating">
-                      <input type="radio" id="star5_safety" name="safety" value="very_good" />
-                      <label for="star5_safety"></label>
-                      <input type="radio" id="star4_safety" name="safety" value="good" />
-                      <label for="star4_safety"></label>
-                      <input type="radio" id="star3_safety" name="safety" value="fair" />
-                      <label for="star3_safety"></label>
-                      <input type="radio" id="star2_safety" name="safety" value="poor" />
-                      <label for="star2_safety"></label>
-                      <input type="radio" id="star1_safety" name="safety" value="very_poor" />
-                      <label for="star1_safety"></label>
-                    </span>
-                  </p>
-                </div>
-                <div class="col-md-6">
-                  <p>
-                    Resource Availability:
-                    <span class="rating">
-                      <input type="radio" id="star5_resource" name="resource_availability" value="very_good" />
-                      <label for="star5_resource"></label>
-                      <input type="radio" id="star4_resource" name="resource_availability" value="good" />
-                      <label for="star4_resource"></label>
-                      <input type="radio" id="star3_resource" name="resource_availability" value="fair" />
-                      <label for="star3_resource"></label>
-                      <input type="radio" id="star2_resource" name="resource_availability" value="poor" />
-                      <label for="star2_resource"></label>
-                      <input type="radio" id="star1_resource" name="resource_availability" value="very_poor" />
-                      <label for="star1_resource"></label>
-                    </span>
-                  </p>
-                </div>
+                  <div class="row">
+                    <div class="col-md-6 mb-3">
+                      <p>
+                        Cleanliness and Hygiene:
+                        <span class="rating">
+                          <input type="radio" id="star5_cleanliness" name="cleanliness" value="very_good" />
+                          <label for="star5_cleanliness"></label>
+                          <input type="radio" id="star4_cleanliness" name="cleanliness" value="good" />
+                          <label for="star4_cleanliness"></label>
+                          <input type="radio" id="star3_cleanliness" name="classleanliness" value="fair" />
+                          <label for="star3_cleanliness"></label>
+                          <input type="radio" id="star2_cleanliness" name="cleanliness" value="poor" />
+                          <label for="star2_cleanliness"></label>
+                          <input type="radio" id="star1_cleanliness" name="cleanliness" value="very_poor" />
+                          <label for="star1_cleanliness"></label>
+                        </span>
+                      </p>
+                    </div>
 
-                <div class="col-md-6">
-                  <p>
-                    Overall facility rating:
-                    <span class="rating">
-                      <input type="radio" id="star5_overall" name="facility_rating" value="very_good" />
-                      <label for="star5_overall"></label>
-                      <input type="radio" id="star4_overall" name="facility_rating" value="good" />
-                      <label for="star4_overall"></label>
-                      <input type="radio" id="star3_overall" name="facility_rating" value="fair" />
-                      <label for="star3_overall"></label>
-                      <input type="radio" id="star2_overall" name="facility_rating" value="poor" />
-                      <label for="star2_overall"></label>
-                      <input type="radio" id="star1_overall" name="facility_rating" value="very_poor" />
-                      <label for="star1_overall"></label>
-                    </span>
-                  </p>
-                </div>
-              </div>
+                    <div class="col-md-6 mb-3">
+                      <p>
+                        Maintenance:
+                        <span class="rating">
+                          <input type="radio" id="star5_maintenance" name="maintenance" value="very_good" />
+                          <label for="star5_maintenance"></label>
+                          <input type="radio" id="star4_maintenance" name="maintenance" value="good" />
+                          <label for="star4_maintenance"></label>
+                          <input type="radio" id="star3_maintenance" name="maintenance" value="fair" />
+                          <label for="star3_maintenance"></label>
+                          <input type="radio" id="star2_maintenance" name="maintenance" value="poor" />
+                          <label for="star2_maintenance"></label>
+                          <input type="radio" id="star1_maintenance" name="maintenance" value="very_poor" />
+                          <label for="star1_maintenance"></label>
+                        </span>
+                      </p>
+                    </div>
 
-              <div class="row">
-                <div class="col-12">
-                  <textarea name="comment" id="message"
-                    placeholder="Please provide any additional comments or suggestions about our college facilities."
-                    rows="5"></textarea>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-12">
-                  <div class="button text-center">
-                    <button type="submit" class="theme-btn">Submit</button>
+                    <div class="col-md-6 mb-3">
+                      <p>
+                        Safety and Security:
+                        <span class="rating">
+                          <input type="radio" id="star5_safety" name="safety" value="very_good" />
+                          <label for="star5_safety"></label>
+                          <input type="radio" id="star4_safety" name="safety" value="good" />
+                          <label for="star4_safety"></label>
+                          <input type="radio" id="star3_safety" name="safety" value="fair" />
+                          <label for="star3_safety"></label>
+                          <input type="radio" id="star2_safety" name="safety" value="poor" />
+                          <label for="star2_safety"></label>
+                          <input type="radio" id="star1_safety" name="safety" value="very_poor" />
+                          <label for="star1_safety"></label>
+                        </span>
+                      </p>
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                      <p>
+                        Resource Availability:
+                        <span class="rating">
+                          <input type="radio" id="star5_resource" name="resource_availability" value="very_good" />
+                          <label for="star5_resource"></label>
+                          <input type="radio" id="star4_resource" name="resource_availability" value="good" />
+                          <label for="star4_resource"></label>
+                          <input type="radio" id="star3_resource" name="resource_availability" value="fair" />
+                          <label for="star3_resource"></label>
+                          <input type="radio" id="star2_resource" name="resource_availability" value="poor" />
+                          <label for="star2_resource"></label>
+                          <input type="radio" id="star1_resource" name="resource_availability" value="very_poor" />
+                          <label for="star1_resource"></label>
+                        </span>
+                      </p>
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                      <p>
+                        Overall facility rating:
+                        <span class="rating">
+                          <input type="radio" id="star5_overall" name="facility_rating" value="very_good" />
+                          <label for="star5_overall"></label>
+                          <input type="radio" id="star4_overall" name="facility_rating" value="good" />
+                          <label for="star4_overall"></label>
+                          <input type="radio" id="star3_overall" name="facility_rating" value="fair" />
+                          <label for="star3_overall"></label>
+                          <input type="radio" id="star2_overall" name="facility_rating" value="poor" />
+                          <label for="star2_overall"></label>
+                          <input type="radio" id="star1_overall" name="facility_rating" value="very_poor" />
+                          <label for="star1_overall"></label>
+                        </span>
+                      </p>
+                    </div>
                   </div>
-                </div>
-              </div>
+
+
+
+                  <div class="row">
+                    <div class="col-12">
+                      <textarea name="comment" id="message"
+                        placeholder="Please provide any additional comments or suggestions about our college facilities."
+                        rows="5"></textarea>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="button text-center">
+                        <button type="submit" class="theme-btn">Submit</button>
+                      </div>
+                    </div>
+                  </div>
             </form>
           </div>
         </div>
