Auto record generator added

--- a/Recess_Project_Template/src/our_app/website/templates/course.html
+++ b/Recess_Project_Template/src/our_app/website/templates/course.html
@@ -125,19 +125,21 @@
                 <div class="col-xl-12">
                     <div class="contact-form-wrapper">
                         <div class="row">
-                            <div class="col-xl-10 col-lg-8 mx-auto">
-                                <div class="section-title1 text-center mb-50">
-                                    <span class="wow fadeInDown" data-wow-delay=".2s" style="color: #333;">Hello! As a
-                                        student, it's your right to evaluate your instructor in different aspects, so
-                                        kindly take some little time to fill the form below, which is intended to
-                                        provide us with feedback about your instructor of your choice according to the
-                                        given fields.<br>
-                                        In doing this, it will help the institution to improve teaching and learning.
-                                        Your response will be treated with utmost confidentiality. Respond without bias.
-                                        Thank you.</span>
-                                </div>
-                            </div>
-                        </div>
+              <div class="col-xl-10 col-lg-8 mx-auto">
+                <div class="section-title1  mb-50">
+                  <h2 class="wow fadeInDown text-center" data-wow-delay=".2s" style="color: #333">Hello! As a student,
+                  </h2>
+                  <br>
+                  <h5 class="wow fadeInDown">It's your right to evaluate your instructor in different aspects, so kindly
+                    take some little time to fill the form below, which is intended to provide us with feedback about
+                    your instructor of your choice according to the given fields.</h5>
+                  <p class="wow fadeInDown" data-wow-delay=".4s" style="color: #333">
+                    In doing this, it will help the institution to improve teaching and learning. Your response will be
+                    treated with utmost confidentiality. Respond without bias. Thank you.
+                  </p>
+                </div>
+              </div>
+            </div>
 
                         <form method="post" class="needs-validation" novalidate>
                             {% csrf_token %}
