--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
@@ -373,7 +373,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Courses</p>
                     <h5 class="font-weight-bolder mb-0">
-                      53
+                      {{ course_items.count }}
                       <span class="text-success text-sm font-weight-bolder">+5</span>
                     </h5>
                   </div>
@@ -395,7 +395,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Instructors</p>
                     <h5 class="font-weight-bolder mb-0">
-                      23
+                      {{instructors.count}}
                       <span class="text-success text-sm font-weight-bolder">+3</span>
                     </h5>
                   </div>
@@ -417,7 +417,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Facilities</p>
                     <h5 class="font-weight-bolder mb-0">
-                      34
+                      {{facilities.count}}
                       <span class="text-danger text-sm font-weight-bolder">+2</span>
                     </h5>
                   </div>
@@ -439,7 +439,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Students</p>
                     <h5 class="font-weight-bolder mb-0">
-                      103,430
+                      {{studentDetails.count}}
                       <span class="text-success text-sm font-weight-bolder">+5</span>
                     </h5>
                   </div>
@@ -464,7 +464,7 @@
                 </div>
               </div>
               <h6 class="ms-2 mt-4 mb-0"> Active Students </h6>
-              <p class="text-sm ms-2"> (<span class="font-weight-bolder">+23%</span>) than last week </p>
+              <p class="text-sm ms-2"> (<span class="font-weight-bolder">{% widthratio studentDetails.count 100 1 %}%</span>) than last week </p>
               <div class="container border-radius-lg">
                 <div class="row">
                   <div class="col-3 py-3 ps-0">
@@ -492,7 +492,7 @@
                       </div>
                       <p class="text-xs mt-1 mb-0 font-weight-bold">Users</p>
                     </div>
-                    <h4 class="font-weight-bolder">3600</h4>
+                    <h4 class="font-weight-bolder">{{studentDetails.count}}</h4>
                     <div class="progress w-75">
                       <div class="progress-bar bg-dark w-60" role="progressbar" aria-valuenow="60" aria-valuemin="0"
                         aria-valuemax="100"></div>
